removed broken test

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,16 @@
 {
-  "cSpell.words": ["paren", "parens"]
+  "cSpell.words": [
+    "Anabelle",
+    "Annabell",
+    "Annalisa",
+    "esnoink",
+    "grognon",
+    "paren",
+    "parens",
+    "puuust",
+    "snork",
+    "snorty",
+    "Анабель",
+    "хрум"
+  ]
 }
